--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo da memória</title>
     <link rel="stylesheet" href="style.css" class="css">
+    <link rel="shortcut icon" type="imagex/png" href="image/brain.png">
 </head>
 <body>
-    <div class="container">
 
+    <h1 class="title-game"> JOGO DA MEMÓRIA</h1>
+
+    <div class="container">
         <!-- data-* -> serve para inserir informações adicionais ao elemento, o asterisco pode ser qualquer palavra, nesse caso: data-info -->
         <div class="card" data-info="dudu">
             <img class="front-face" src="image/dudu.jpg">
